feat(repository): added repository config to package json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "hh-toolkit-utils",
+  "version": "1.0.1",
+  "description": "A comprehensive collection of React hooks, utility functions, and helpers for modern React development",
+  "license": "MIT",
+  "type": "module",
   "publishConfig": {
     "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hacagahasanli/hh-toolkit-utils"
   },
   "keywords": [
     "lib",
@@ -10,12 +18,12 @@
     "toolkit",
     "utilities"
   ],
-  "version": "1.0.1",
-  "type": "module",
   "main": "./dist/_global.js",
   "types": "./dist/_global.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "LICENSE",
+    "README.md"
   ],
   "exports": {
     ".": {
