--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,4 +29,5 @@ jobs:
       - name: Run semantic-release
         run: npx semantic-release
         env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
